[package]
name = "hermes-local-client"
version = "1.0.0"
description = "A fully local Hermes Client with rich messaging features"
authors = ["Hermes Desktop Team"]
edition = "2021"

[lib]
name = "hermes_local_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
